# accountant

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  MIGRATION_TO_UV.md  MODERN_TOOLING_SETUP.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  spec.md
.github/workflows/: ci.yml
data/: chase-jan-2024.csv
ingestion/: __init__.py  config_loader.py  runner.py
ingestion/config/: chase_checking.yaml  zerodha_tradebook.yaml
ingestion/drivers/: __init__.py  csv_importer.py
ledger/: main.bean
ledger/accounts/: crypto_accounts.bean  india_accounts.bean  us_accounts.bean
ledger/includes/: chase_bank_import.bean  inflation_usd.bean
plugins/: __init__.py  inflation.py
scripts/: generate_inflation_data.py
tests/: test_integration.py
tests/ingestion/: test_config_loader.py  test_csv_importer.py
tests/plugins/: test_inflation.py
